# Stellar-Hackathon

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/contracts/community_contract/: Cargo.toml
backend/contracts/community_contract/src/: lib.rs
backend/contracts/donation_contract/: Cargo.toml
backend/contracts/donation_contract/src/: lib.rs
backend/contracts/escrow_contract/: Cargo.toml
backend/contracts/escrow_contract/src/: lib.rs
backend/migrations/: 001_initial.sql
backend/src/: config.rs  main.rs
backend/src/api/: handlers.rs  mod.rs  routes.rs
backend/src/database/: mod.rs
backend/src/models/: mod.rs
backend/src/services/: community_service.rs  donation_service.rs  escrow_service.rs  mod.rs  stellar_service.rs
backend/src/stellar/: client.rs  contracts.rs  mod.rs  transactions.rs
docs/: stellar-integration.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/Components/AccountBalance/: AccountBalance.tsx
frontend/src/Components/AccountInfo/: AccountInfo.tsx
frontend/src/Components/ActionButtons/: ActionButtons.tsx
frontend/src/Components/ActionCards/: ActionCards.tsx
frontend/src/Components/CommunityCard/: CommunityCard.tsx
frontend/src/Components/CommunityHeader/: CommunityHeader.tsx
frontend/src/Components/Header/: Header.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/services/: api.ts
scripts/: .env.dev  dev-setup.sh  start-backend.sh  start-production.sh  stop-backend.sh
(+11 files in other folders)
